--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -15,4 +15,19 @@
     <string name="email">Correo</string>
     <string name="repeat_password">Repita la contraseña</string>
     <string name="create_account">Crear cuenta</string>
+    <string name="connection_error_title">Error de conexión</string>
+    <string name="connection_error_message">Error de conexión con el servidor.</string>
+    <string name="connect">Conectar</string>
+    <string name="reconnect">Reconectar</string>
+    <string name="cancel">Cancelar</string>
+    <string name="ok">Aceptar</string>
+    <string name="yes">Si</string>
+    <string name="no">No</string>
+    <string name="lifetime_dives">Estadísticas totales</string>
+    <string name="dive_number">Dive Number:</string>
+    <string name="date">Date</string>
+    <string name="close">Cerrar</string>
+    <string name="replace">Reemplazar</string>
+    <string name="delete">Eliminar</string>
+    <string name="time">Hora</string>
 </resources>
